--- a/index.html
+++ b/index.html
@@ -19,12 +19,81 @@
                 </tr>
             </thead>
             <tbody>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>1</td>
+                <td>x</td>
+                <td>0</td>
+                <td>=</td>
+                <td>0</td>
+            </tbody>
+            <tbody>
+                <td>1</td>
+                <td>x</td>
+                <td>1</td>
+                <td>=</td>
+                <td>1</td>
+            </tbody>
+            <tbody>
+                <td>1</td>
+                <td>x</td>
+                <td>2</td>
+                <td>=</td>
+                <td>1</td>
+            </tbody>
+            <tbody>
+                <td>1</td>
+                <td>x</td>
+                <td>3</td>
+                <td>=</td>
+                <td>3</td>
+            </tbody>
+            <tbody>
+                <td>1</td>
+                <td>x</td>
+                <td>4</td>
+                <td>=</td>
+                <td>4</td>
+            </tbody>
+            <tbody>
+                <td>1</td>
+                <td>x</td>
+                <td>5</td>
+                <td>=</td>
+                <td>5</td>
+            </tbody>
+            <tbody>
+                <td>1</td>
+                <td>x</td>
+                <td>6</td>
+                <td>=</td>
+                <td>6</td>
+            </tbody>
+            <tbody>
+                <td>1</td>
+                <td>x</td>
+                <td>7</td>
+                <td>=</td>
+                <td>7</td>
+            </tbody>
+            <tbody>
+                <td>1</td>
+                <td>x</td>
+                <td>8</td>
+                <td>=</td>
+                <td>8</td>
+            </tbody>
+            <tbody>
+                <td>1</td>
+                <td>x</td>
+                <td>9</td>
+                <td>=</td>
+                <td>9</td>
+            </tbody>
+            <tbody>
+                <td>1</td>
+                <td>x</td>
+                <td>10</td>
+                <td>=</td>
+                <td>10</td>
             </tbody>
         </table>
     </div>
