--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="content-tabuada">
-        <table>
+        <table id="tabuada">
             <thead>
                 <tr>
                     <td>Valor A</td>
@@ -18,84 +18,9 @@
                     <td>Resultado</td>
                 </tr>
             </thead>
-            <tbody>
-                <td>1</td>
-                <td>x</td>
-                <td>0</td>
-                <td>=</td>
-                <td>0</td>
-            </tbody>
-            <tbody>
-                <td>1</td>
-                <td>x</td>
-                <td>1</td>
-                <td>=</td>
-                <td>1</td>
-            </tbody>
-            <tbody>
-                <td>1</td>
-                <td>x</td>
-                <td>2</td>
-                <td>=</td>
-                <td>1</td>
-            </tbody>
-            <tbody>
-                <td>1</td>
-                <td>x</td>
-                <td>3</td>
-                <td>=</td>
-                <td>3</td>
-            </tbody>
-            <tbody>
-                <td>1</td>
-                <td>x</td>
-                <td>4</td>
-                <td>=</td>
-                <td>4</td>
-            </tbody>
-            <tbody>
-                <td>1</td>
-                <td>x</td>
-                <td>5</td>
-                <td>=</td>
-                <td>5</td>
-            </tbody>
-            <tbody>
-                <td>1</td>
-                <td>x</td>
-                <td>6</td>
-                <td>=</td>
-                <td>6</td>
-            </tbody>
-            <tbody>
-                <td>1</td>
-                <td>x</td>
-                <td>7</td>
-                <td>=</td>
-                <td>7</td>
-            </tbody>
-            <tbody>
-                <td>1</td>
-                <td>x</td>
-                <td>8</td>
-                <td>=</td>
-                <td>8</td>
-            </tbody>
-            <tbody>
-                <td>1</td>
-                <td>x</td>
-                <td>9</td>
-                <td>=</td>
-                <td>9</td>
-            </tbody>
-            <tbody>
-                <td>1</td>
-                <td>x</td>
-                <td>10</td>
-                <td>=</td>
-                <td>10</td>
-            </tbody>
+            <tbody></tbody>
         </table>
     </div>
+    <script src="assets/js/index.js"></script>
 </body>
 </html>
